components/Layout/Layout.module.scss
.container {
	min-height: 100dvh;
	display: flex;
	width: 100%;
}

.content {
	flex: 1;
	margin-top: calc(65px);
}

.main {
	width: 100%;
	margin-top: 2rem;
	margin-bottom: 2rem;
}

.authenticated {
	margin-left: 350px;
	margin-top: 2rem;
	margin-bottom: 2rem;
}

.unauthenticated {
	margin-top: calc(64px + 2rem);
}

.landing {
	margin-top: calc(64px);
}

